--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   starchasers-nginx-config-creator:
     image: starchasers-nginx-config-creator
+    build:
+      context: .
     volumes:
       - type: volume
         source: backup_vol
@@ -14,6 +16,7 @@ services:
     environment:
       - CGO_ENABLED=0
       - API_KEY=${API_KEY}
+      - HEALTHCHECK_ALLOWED_IP=${HEALTHCHECK_ALLOWED_IP}
 
 volumes:
   backup_vol:
