Add the dev setup

--- a/local/config-creator-directus-dev/Dockerfile
+++ b/local/config-creator-directus-dev/Dockerfile
@@ -1,5 +1,11 @@
 FROM golang:1.22
 
-RUN apt update && apt install nginx libnginx-mod-stream -y
+RUN apt update && apt install nginx libnginx-mod-stream openssh-server -y
+
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN echo 'root:superSecret123' | chpasswd
 
 RUN rm /etc/nginx/nginx.conf
+ADD start.sh start.sh
+RUN chmod +x ./start.sh
+ENTRYPOINT ./start.sh
