--- a/local/config-creator-directus-dev/docker-compose.yml
+++ b/local/config-creator-directus-dev/docker-compose.yml
@@ -34,6 +34,10 @@ services:
       ADMIN_PASSWORD: "admin@example.com"
       SPM_WEBHOOK_SECRET: "09sPuPvEhRkKEOMSWc/gBXxxKb2iDCdwLDv9av+sL3U="
       SPM_WEBHOOK_URL: "http://config-creator-dev:8080/generate-config"
+  config-creator:
+    build: .
+    ports:
+      - "8022:22"
 volumes:
   postgres:
 networks:
